--- a/app/src/main/res/layout/daily_text_fragment.xml
+++ b/app/src/main/res/layout/daily_text_fragment.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView android:text="@string/daily_text"
+    <TextView
         android:id="@+id/daily_text_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
