--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,9 @@
         android:layout_height="wrap_content"
         tools:layout="@layout/daily_text_fragment" />
 
+    <TextView
+        android:id="@+id/settingsTestView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
